--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ body {
 }
 
 .ant-select-dropdown .rc-virtual-list-holder-inner {
-  overflow-x: auto !important;
+  /* overflow-x: auto !important; */
   /* max-width: 700px; */
   width: 200px;
 }
