--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,8 @@ body {
 }
 
 .ant-select-dropdown .rc-virtual-list-holder > div:first-child {
-  overflow-x: auto !important;
+  overflow-x: auto;
+  /* width: 500px; */
 }
 
 .ant-select-dropdown .rc-virtual-list-holder-inner {
@@ -51,11 +52,12 @@ body {
 } */
 
 .ant-select-item-option-content {
-  min-width: 700px;
+  /* min-width: 700px; */
+  overflow-x: auto;
 }
 
-/* .ant-select-item-option-content {
+.ant-select-item-option-content {
   overflow: visible !important;
   text-overflow: clip !important;
-  white-space: normal !important;
-} */
+  /* white-space: normal !important; */
+}
